:recycle: 2주차 리뷰 사항 반영